k8s/workflow-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-service
  labels:
    app: workflow-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflow-service
  template:
    metadata:
      labels:
        app: workflow-service
    spec:
      containers:
        - name: workflow-service
          image: tabatskyi/microservices-workflow-service
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: workflow-service
  labels:
    app: workflow-service
spec:
  selector:
    app: workflow-service
  ports:
    - name: http
      port: 8080
      targetPort: http
